# allquests

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: code_verify.yml
src/allquests/http/: methods.py  proxy.py  request_args.py
src/allquests/http/asyncreq/: get.py
src/allquests/http/sync/: get.py
test/: test_module_val.py
test/http/asyncreq/: test_get_async.py
test/http/sync/: test_get_sync.py
