[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "allquests"
dynamic = ["version"]
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
  { name = "João Fernandes", email = "joaogabrielvlf@gmail.com" },
]
description = "A Easy and Pratical HTTP Requests"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "httpx==0.27.2",                          # BSD License (BSD-3-Clause)
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.2",
  "pytest-cov==5.0.0",
  "python-magic==0.4.27 ; platform_system == 'Linux'",
  "python-magic-bin==0.4.14 ; platform_system != 'Linux'",
  "ruff==0.5.4",
  "pre-commit==3.5.0",
  "freezegun==1.5.1",
]

[tool.hatch.version]
path = "src/allquests/__init__.py"
