[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "allquests"
dynamic = ["version"]
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
  { name = "João Fernandes", email = "joaogabrielvlf@gmail.com" },
]
description = "A Easy and Pratical HTTP Requests"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  # 3.10
  "httpx==0.27.2 ; python_version > '3.9' and python_version < '3.11'",           # BSD License (BSD-3-Clause)


]

[project.optional-dependencies]
dev = [
  # 3.10
  "pytest==8.3.2 ; python_version > '3.9' and python_version < '3.11'",
  "pytest-cov==6.0.0 ; python_version > '3.9' and python_version < '3.11'",
  "python-magic==0.4.27 ; python_version > '3.9' and python_version < '3.11' and platform_system == 'Linux'",
  "python-magic-bin==0.4.14 ; python_version > '3.9' and python_version < '3.11' and platform_system != 'Linux'",
  "pytest-asyncio==0.24.0 ; python_version > '3.9' and python_version < '3.11'",
  "ruff==0.7.1 ; python_version > '3.9' and python_version < '3.11'",
  "pre-commit==4.0.1 ; python_version > '3.9' and python_version < '3.11'",
  "freezegun==1.5.1 ; python_version > '3.9' and python_version < '3.11'",
  "mypy==1.13.0 ; python_version > '3.9' and python_version < '3.11'",


]

[tool.hatch.version]
path = "src/allquests/__init__.py"
